# ai-atl-usecases

./: .gitignore  Dockerfile  README.md  app.py  deploy.sh  pyproject.toml  streamlit_app.py
.github/workflow/: docker-compose.yml
.github/workflows/: deploy.yml
usecases/: db_helper.py  detection_stream.py  face_database.py  face_identification.py  face_prompt_llm.py  face_recog.py  stream.py
usecases/migrations/: V1_create_tables.sql
utilities/: constants.py
webserver/: api_models.py  endpoints.py  extensions.py
