[tool.poetry]
name = "usecase-svc"
version = "0.1.0"
description = ""
authors = ["raakhal-rapolu <pandu3011@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-restx = "^1.3.0"
flask-cors = "^5.0.0"
flask-swagger-ui = "^4.11.1"
taskipy = "^1.14.0"
psycopg2 = "^2.9.10"
numpy = "^2.1.2"
jsonify = "^0.5"
requests = "^2.32.3"
opencv-python-headless = "^4.10.0.84"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"
ultralytics = "^8.3.23"
face-recognition = "^1.3.0"
load-dotenv = "^0.1.0"


[tool.taskipy.tasks]
usecase-svc-backend = { cmd = 'python app.py', help = 'Runs the application' }



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
